# CroissantAPI-Website

./: .gitignore  ProxyMiddleware.ts  README.md  convert-png-to-avif.js  eslint.config.mjs  i18n.js  next-i18next.config.js  next.config.js  package-lock.json  package.json  serve.js  serve.ts  tailwind.config.js  tsconfig.json
.github/workflows/: lint-and-tsc.yml
Croissant-API/: .gitignore  README.md  database_migration_badges_views.sql  jest.config.js  jest.setup.js  package-lock.json  package.json  pnpm-lock.yaml
Croissant-API/__tests__/: index.test.js
Croissant-API/mailTemplates/: accountConfirmation.ejs  connectionNotification.ejs  passwordReset.ejs
Croissant-API/src/: app.ts  (+2 more)
components/: CachedImage.tsx  Footer.tsx  ImagePreloader.tsx  Inventory.tsx  ListSection.tsx  MetaLinks.tsx  NavBar.tsx  Searchbar.tsx  TradePanel.tsx  discordRpcManager.ts
hooks/: AuthContext.tsx  ImageCacheContext.tsx  LobbyContext.tsx  UserCacheContext.tsx  useAuth.ts  useCurrentLocale.ts  useIsMobile.ts  useUserCache.ts
koalyx/: .gitignore  ARTICLES-SYSTEM.md  BACKGROUND_FIX_SUMMARY.md  BADGES-ACCESS-PREVIEW.md  DESIGN_OVERHAUL_SUMMARY.md  DISCORD_SETUP.md  FINAL_COMPLETION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  GAME-ACCESS-LEVELS-GUIDE.md  GAME-DETAIL-BADGES-UPDATE.md  MIGRATION-VIP-TO-PLUS-ULTRA.md  MULTILINGUAL_IMPLEMENTATION.md  TRANSLATION_COMPLETE_SUMMARY.md  TRANSLATION_PROGRESS.md  database-setup.sql  game.html  middleware.ts  next.config.mjs  package-lock.json  package.json  shop.html  tailwind.config.js  tsconfig.json  unlockshy-db.sql
lib/: slug.ts  webauthnService.ts
pages/: 404.tsx  UserController.ts  _app.tsx  api-docs.tsx  badges.tsx  buy-credits.tsx  close.tsx  contact.tsx  download-launcher.tsx  forgot-password.tsx  game-shop.tsx  game.tsx  gift.tsx  index.tsx  join-lobby.tsx  login.tsx  marketplace.tsx  my-buy-orders.tsx  my-market-listings.tsx  privacy.tsx  profile.tsx  register.tsx  reset-password.tsx  search.tsx  settings.tsx  studios.tsx  test-oauth.tsx  tos.tsx  transmitToken.tsx
portions/: Footer.tsx  NavBar.tsx
public/: index.html  join-lobby.html  manifest.json  robots.txt  sitemap.xml  transmitToken.html
public/downloadables/croissant-cpp/: CMakeLists.txt  CroissantAPIConfig.cmake.in  README_croissant_api_cpp.md  croissant_api.hpp  example_usage.cpp
server/: GenKey.d.ts  GenKey.js  ProxyMiddleware.d.ts  ProxyMiddleware.js  UserCache.d.ts  UserCache.js  serve.js  serve.ts
src/: App.tsx  index.tsx
styles/: globals.css  launcher.css  main.css  oauth2.css  phone.css  rarity.css
(+472 files in other folders)
